<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="430dp"
            android:background="@color/background_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/button_search"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:text="@string/Search_button"
                android:textColor=" #354A00"
                app:backgroundTint="#E3A43E"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="12"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/enter_text"
                android:textColor="@color/text_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_text" />

            <TextView
                android:id="@+id/main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif"
                android:text="@string/what_cook"
                android:textColor="@color/text_main"
                android:textSize="24sp"
                app:drawableTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                app:layout_constraintEnd_toStartOf="@+id/main_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_restran" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="220dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_main"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageCake"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cezar" />

                <TextView
                    android:id="@+id/name_picture_cake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/Apple_cake"
                    android:textColor="@color/text_main"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="411dp"
            android:layout_height="207dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <CheckBox
                android:id="@+id/checkbox_2"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="177dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="158dp"
                android:text="@string/Water" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="127dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="125dp"
                android:text="@string/Ingridiens"
                android:textColor="@color/text_main"
                android:textColorLink="@color/text_main"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_next_page"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="110dp"
                android:layout_marginEnd="101dp"
                android:layout_marginBottom="26dp"
                android:text="Переход"
                android:textColor=" #354A00"
                app:backgroundTint="#E3A43E" />

            <CheckBox
                android:id="@+id/checkbox_1"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_next_page"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="177dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="50dp"
                android:text="@string/Muke" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>